<resources>
    <string name="app_name">Hack The Code</string>
    <string name="prompt_decode_string">Decode This Sentence!</string>
    <string name="encoded_here">Encoded text put here at runtime</string>
    <string name="final_answer">Answer</string>
    <string name="hint">Hint</string>
    <string name="encode">Encode</string>
    <string name="encoded">Encoded</string>
    <string name="not_encoded">Plain</string>
    <string name="check_answer">Check My Answer</string>
    <string name="example_sentence">example sentence</string>
    <string name="empty_string" />
    <string name="select_level">Select level</string>
    <string name="instructions">Instructions</string>
    <string name="about_app">About the App</string>
    <string name="select_level_prompt">Select a level</string>
    <string name="numeric_1">1</string>
    <string name="numeric_2">2</string>
    <string name="numeric_3">3</string>
    <string name="numeric_4">4</string>
    <string name="numeric_5">5</string>
    <string name="numeric_6">6</string>
    <string name="numeric_7">7</string>
    <string name="numeric_8">8</string>
    <string name="preferences_key">HACK_THE_CODE_PREFERENCES</string>
    <string name="maximum_level_key">LEVEL_KEY</string>
    <string name="try_again">Incorrect. Try again</string>
    <string name="guesses">Guesses</string>
    <string name="level_title">Level %d</string>
    <string name="feedback_level_locked">That level is locked</string>
    <string name="feedback_level_complete">Correct!</string>
    <!--Open source strings-->
    <string name="android_sdk">The android open source project</string>
    <string name="android_sdk_url">https://source.android.com/</string>
    <string name="room_library">Room Persistence Library</string>
    <string name="room_url">https://developer.android.com/jetpack/androidx/releases/room</string>
    <string name="lifecycle_library">Lifecycle Components</string>
    <string name="lifecycle_library_url">https://developer.android.com/reference/androidx/lifecycle/package-summary.html</string>
    <string name="espresso_library">Espresso Testing Library</string>
    <string name="espresso_url">https://developer.android.com/training/testing/ui-testing/espresso-testing</string>
    <string name="material_library">Material Design Library</string>
    <string name="material_url">https://github.com/material-components/material-components-android</string>

    <string name="about_the_development">Development</string>
    <string name="about_open_source">Open Source Contributions</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="see_code">See the source code</string>
    <string name="about_app_string">This app was created to help students plan what semester to take required courses so they complete their degree on time</string>
    <string name="about_developer_string">This app was developed by Russell Waterhouse, A Software Engineering student at the University of Victoria</string>
    <string name="about_code_string">If you are interested in this project, you can look at the source code by pressing the button below!</string>
    <string name="link_to_code">https://github.com/Russell-Waterhouse/hack_the_code</string>
    <string name="thank_open_source">The developer would like to thank the following Open Source contributions</string>
    <string name="click_links_prompt">Tap on the button to find out more about each contribution that helped make this project possible</string>
    <string name="content_description_launch_icon">Launch Icon for the app</string>
    <string name="content_description_developer">A picture of the developer</string>
    <string name="settings">Settings</string>
    <string name="delete_guesses">Delete all guesses</string>
    <string name="reset">Reset App</string>
    <string name="feedback_guesses_removed">All guesses removed from all levels</string>
    <string name="feedback_app_reset">The app has been Reset</string>
    <string name="instructions_string">1. Select a level\n2. Take a guess at the correct answer \n3. Learn from the output and try until you get the right answer! \n Remember: the answers are case sensitive</string>
</resources>
