<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/open_source_thanks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/thank_open_source"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/prompt_see_libraries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textAlignment="center"
                android:text="@string/click_links_prompt" />

            <Button
                android:id="@+id/android_sdk"
                style="@style/buttonAccent"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android_sdk" />

            <Button
                android:id="@+id/room_persistence"
                style="@style/buttonAccent"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/room_library" />

            <Button
                android:id="@+id/live_data"
                style="@style/buttonAccent"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lifecycle_library" />

            <Button
                android:id="@+id/espresso_library"
                style="@style/buttonAccent"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/espresso_library" />

            <Button
                android:id="@+id/material_library"
                style="@style/buttonAccent"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/material_library" />

            <Button
                android:id="@+id/dagger_library"
                style="@style/buttonAccent"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dagger_library"/>
        </LinearLayout>
</ScrollView>
